<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sandboxcode.trackerappr2.activities.MainActivity">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="99"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_create"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="1000"
        android:title="@string/action_logout"
        android:icon="@drawable/ic_power_settings_new"
        app:showAsAction="never" />
</menu>