<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO - Change to TextInputLayout and other Material Design items -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_name_hint"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/edit_spin_models"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model_hint"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:gravity="center"
                android:text="@string/year_text"
                android:textSize="16sp" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/edit_slider_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:stepSize="1"
                android:valueFrom="2000"
                android:valueTo="2021"
                app:values="@array/year_range" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:gravity="center"
                android:text="@string/price_text"
                android:textSize="16sp" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/edit_slider_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:stepSize="5000"
                android:valueFrom="0"
                android:valueTo="40000"
                app:values="@array/price_range" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_edit_trim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trim_level_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_dealerships_text"
                android:layout_marginStart="8dp"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/edit_switch_dealerships"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="32dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:gravity="center">

            <Button
                android:id="@+id/edit_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondaryDark"
                android:layout_marginEnd="24dp"
                android:text="@string/cancel_text"
                android:onClick="cancelChanges"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/edit_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/save_text"
                android:onClick="saveChanges"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</layout>